centered thumbnail on mobile and fixed spacing issue

--- a/src/components/button/Button.module.css
+++ b/src/components/button/Button.module.css
@@ -35,6 +35,7 @@
   text-transform: uppercase;
   padding: 0;
   border: none;
+  z-index: 99;
 }
 
 .transparent::before {
