--- a/src/components/work/workCard/workCard.module.css
+++ b/src/components/work/workCard/workCard.module.css
@@ -93,13 +93,12 @@
     justify-content: left;
   }
   .wrapper {
-    padding: 1rem 0;
+    margin: -2rem 0;
   }
   .thumbnail,
   .wrapper:nth-child(even) .thumbnail {
     min-width: 0;
-    width: 200%;
-    margin-left: 75%;
+    width: 120%;
     max-width: none;
   }
   .content {
